--- a/VCModel.vcxproj
+++ b/VCModel.vcxproj
@@ -71,7 +71,6 @@
     <ClInclude Include="..\VCMaterials\VCMaterials\src\materialtemplates.h" />
     <ClInclude Include="..\VCMaterials\VCMaterials\src\mtllibraryserializer.h" />
     <ClInclude Include="..\VCMaterials\VCMaterials\src\usersettings.h" />
-    <ClInclude Include="include\BinaryIO.h" />
     <ClInclude Include="include\crc32c\crc32c.h" />
     <ClInclude Include="include\hash.h" />
     <ClInclude Include="include\mikktspace.h" />
@@ -96,6 +95,8 @@
     <ClInclude Include="src\skinmodel.h" />
     <ClInclude Include="src\skinmodelpoly.h" />
     <ClInclude Include="src\wavefront.h" />
+    <ClInclude Include="src\yukes\yukesobj.h" />
+    <ClInclude Include="src\yukes\yukes_vertexbuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\VCMaterials\VCMaterials\src\common.cpp" />
@@ -109,7 +110,6 @@
     <ClCompile Include="..\VCMaterials\VCMaterials\src\materialtemplates.cpp" />
     <ClCompile Include="..\VCMaterials\VCMaterials\src\mtllibraryserializer.cpp" />
     <ClCompile Include="..\VCMaterials\VCMaterials\src\usersettings.cpp" />
-    <ClCompile Include="include\BinaryIO.cpp" />
     <ClCompile Include="include\hash.cpp" />
     <ClCompile Include="include\mikktspace.c" />
     <ClCompile Include="src\blendshapes_legacy.cpp" />
@@ -134,6 +134,8 @@
     <ClCompile Include="src\skinmodelpoly.cpp" />
     <ClCompile Include="src\tangents.cpp" />
     <ClCompile Include="src\wavefront.cpp" />
+    <ClCompile Include="src\yukes\yukesobj.cpp" />
+    <ClCompile Include="src\yukes\yukes_vertexbuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\VCModel" />
@@ -461,7 +463,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c-d.lib;$(SOLUTIONDIR)libs\debug\memoryreader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -480,7 +482,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c-d.lib;$(SOLUTIONDIR)libs\debug\memoryreader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -527,7 +529,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;$(SOLUTIONDIR)libs\release\memoryreader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -553,7 +555,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;$(SOLUTIONDIR)libs\release\memoryreader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -580,7 +582,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "C:\Users\wauke\AppData\Roaming\Blender 
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SOLUTIONDIR)include\crc32c\crc32c.lib;$(SOLUTIONDIR)libs\release\memoryreader.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
